[tool.poetry]
name = "github-action-poetry"
version = "0.1.0"
description = ""
authors = ["mahfooz_iiitian <mahfooz.iiitian@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
